# cardano-client-lib

./: .env.DevnetTest  .gitignore  .gitmodules  404.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CNAME  Jenkinsfile  Jenkinsfile.it  LICENSE  README-0_1_5.md  README.md  blueprint-code-generation-refactoring-plan.md  blueprint-overall-plan.md  blueprint-refactoring-phase1-complete.md  build.gradle  docker-compose-devnet-test.yaml  docs-revamp-backlog.md  docs.html  docs.txt  gradle.properties  index.html  index.txt  settings.gradle  sitemap.xml
.github/: FUNDING.yml
address/: README.md  build.gradle
annotation-processor/: README.md  build.gradle
backend/: README.md  build.gradle
backend-modules/: build.gradle
cip/: README.md  build.gradle
coinselection/: README.md  build.gradle
common/: README.md  build.gradle
common-spec/: build.gradle
core/: README.md  build.gradle
core-api/: README.md  build.gradle
crypto/: README.md  build.gradle
crypto-ext/: README.md  build.gradle
docs/: README.md  blueprint-shared-type-registry.md  contributing-to-docs.html  contributing-to-docs.txt  docusaurus.config.js  next.config.mjs  package-lock.json  package.json  preview.html  preview.txt  showcase.html  showcase.txt  sidebars.js  support-this-project.html  support-this-project.txt
docs-nextra/: .gitignore  mdx-components.tsx  package.json  tsconfig.json
extra-suppliers/: build.gradle
extras/: README.md  build.gradle  gradle.properties  settings.gradle
function/: README.md  build.gradle
rust/: Cargo.toml
rust/src/: address.rs  lib.rs  transaction.rs
(+4023 files in other folders)
