[package]
name = "cardano-jni-wrapper"
version = "0.1.0"
authors = ["Satya <satya@bloxbean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ffi-support = "0.4.2"
jni = "0.19.0"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
